--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -158,6 +158,49 @@
     "addToFavorites": "Додај во Омилени",
     "removeFromFavorites": "Отстрани од Омилени"
   },
+  "productDetails": {
+    "requestQuote": "Побарај Понуда",
+    "backToProducts": "Назад",
+    "technicalSpecs": "Технички Спецификации",
+    "keyFeatures": "Главни Карактеристики",
+    "applications": "Примени",
+    "features": {
+      "premiumMaterial": "Премиум Материјал",
+      "surfaceFinish": "Површинска Обработка",
+      "warranty": "Гаранција",
+      "certifiedQuality": "Сертифициран Квалитет",
+      "contactForFeatures": "Контактирајте не за повеќе детали за карактеристиките на овој производ"
+    },
+    "usageAreas": {
+      "compactHPL": {
+        "item1": "Кујнски работни површини и маси",
+        "item2": "Ѕидни панели и прегради",
+        "item3": "Фасади на мебел и врати"
+      },
+      "mattress": {
+        "item1": "Станбени спални соби",
+        "item2": "Хотелски и угостителски соби",
+        "item3": "Домови и студентски сместувања"
+      },
+      "mdfChipBoard": {
+        "item1": "Производство на мебел по мерка",
+        "item2": "Ормари и единици за складирање",
+        "item3": "Полици и изложбени простори"
+      },
+      "sofaChair": {
+        "item1": "Дневни соби и животни простори",
+        "item2": "Канцеларии и работни простори",
+        "item3": "Простори за угостителство и рецепција"
+      },
+      "default": {
+        "item1": "Станбени и комерцијални проекти",
+        "item2": "Примени на внатрешен дизајн",
+        "item3": "Проекти за изработка по мерка"
+      }
+    },
+    "otherProducts": "Можеби ќе Ви се Допадне Исто Така",
+    "origin": "Потекло"
+  },
   "notFound": {
     "subtitle": "Мебелот Не е Пронајден",
     "title": "Упс! Оваа соба е празна 🪑",
