--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -158,6 +158,49 @@
     "addToFavorites": "Додај у Фаворите",
     "removeFromFavorites": "Уклони из Фаворита"
   },
+  "productDetails": {
+    "requestQuote": "Затражи Понуду",
+    "backToProducts": "Назад",
+    "technicalSpecs": "Техничке Спецификације",
+    "keyFeatures": "Кључне Карактеристике",
+    "applications": "Примене",
+    "features": {
+      "premiumMaterial": "Премиум Материјал",
+      "surfaceFinish": "Површинска Обрада",
+      "warranty": "Гаранција",
+      "certifiedQuality": "Сертификован Квалитет",
+      "contactForFeatures": "Контактирајте нас за више детаља о карактеристикама овог производа"
+    },
+    "usageAreas": {
+      "compactHPL": {
+        "item1": "Кухињске радне површине и столови",
+        "item2": "Зидни панели и преграде",
+        "item3": "Фасаде намештаја и врата"
+      },
+      "mattress": {
+        "item1": "Стамбене спаваће собе",
+        "item2": "Хотелске и угоститељске собе",
+        "item3": "Домови и студентски смештаји"
+      },
+      "mdfChipBoard": {
+        "item1": "Производња намештаја по мери",
+        "item2": "Ормарићи и јединице за складиштење",
+        "item3": "Полице и излози"
+      },
+      "sofaChair": {
+        "item1": "Дневне собе и простори за живот",
+        "item2": "Канцеларије и радни простори",
+        "item3": "Простори за угошћавање и рецепцију"
+      },
+      "default": {
+        "item1": "Стамбени и комерцијални пројекти",
+        "item2": "Примене унутрашњег дизајна",
+        "item3": "Пројекти израде по мери"
+      }
+    },
+    "otherProducts": "Можда ће Вам се Такође Свидети",
+    "origin": "Порекло"
+  },
   "notFound": {
     "subtitle": "Намештај Није Пронађен",
     "title": "Упс! Ова соба је празна 🪑",
