--- a/public/locales/hr/translation.json
+++ b/public/locales/hr/translation.json
@@ -158,6 +158,49 @@
     "addToFavorites": "Dodaj u Favorite",
     "removeFromFavorites": "Ukloni iz Favorita"
   },
+  "productDetails": {
+    "requestQuote": "Zatraži Ponudu",
+    "backToProducts": "Natrag",
+    "technicalSpecs": "Tehničke Specifikacije",
+    "keyFeatures": "Ključne Značajke",
+    "applications": "Primjene",
+    "features": {
+      "premiumMaterial": "Premium Materijal",
+      "surfaceFinish": "Površinska Obrada",
+      "warranty": "Jamstvo",
+      "certifiedQuality": "Certificirana Kvaliteta",
+      "contactForFeatures": "Kontaktirajte nas za više detalja o značajkama ovog proizvoda"
+    },
+    "usageAreas": {
+      "compactHPL": {
+        "item1": "Kuhinjske radne površine i stolovi",
+        "item2": "Zidni paneli i pregrade",
+        "item3": "Fasade namještaja i vrata"
+      },
+      "mattress": {
+        "item1": "Stambene spavaće sobe",
+        "item2": "Hotelske i ugostiteljske sobe",
+        "item3": "Domovi i studentski smještaji"
+      },
+      "mdfChipBoard": {
+        "item1": "Proizvodnja namještaja po mjeri",
+        "item2": "Ormarići i jedinice za skladištenje",
+        "item3": "Police i izlozi"
+      },
+      "sofaChair": {
+        "item1": "Dnevne sobe i prostori za život",
+        "item2": "Uredi i radni prostori",
+        "item3": "Prostori za ugošćavanje i recepciju"
+      },
+      "default": {
+        "item1": "Stambeni i komercijalni projekti",
+        "item2": "Primjene unutarnjeg dizajna",
+        "item3": "Projekti izrade po mjeri"
+      }
+    },
+    "otherProducts": "Možda Će Vam se Također Svidjeti",
+    "origin": "Podrijetlo"
+  },
   "notFound": {
     "subtitle": "Namještaj Nije Pronađen",
     "title": "Ups! Ova soba je prazna 🪑",
