--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -64,7 +64,11 @@
     "inStock": "En stock",
     "outOfStock": "Rupture de stock",
     "availableColors": "Couleurs disponibles:",
-    "viewDetails": "Voir les Détails"
+    "viewDetails": "Voir les Détails",
+    "productFound": "produit trouvé",
+    "productsFound": "produits trouvés",
+    "tryAdjusting": "Essayez d'ajuster votre recherche ou votre filtre pour trouver ce que vous cherchez.",
+    "clearAllFilters": "Effacer Tous les Filtres"
   },
   "about": {
     "title": "À Propos de DoqiSHPK",
