--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -64,7 +64,11 @@
     "inStock": "Disponibile",
     "outOfStock": "Esaurito",
     "availableColors": "Colori disponibili:",
-    "viewDetails": "Vedi Dettagli"
+    "viewDetails": "Vedi Dettagli",
+    "productFound": "prodotto trovato",
+    "productsFound": "prodotti trovati",
+    "tryAdjusting": "Prova a modificare la tua ricerca o il filtro per trovare ciò che stai cercando.",
+    "clearAllFilters": "Cancella Tutti i Filtri"
   },
   "about": {
     "title": "Chi è DoqiSHPK",
