fix: fixing some changes

--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -79,15 +79,15 @@
     },
     "mission": {
       "title": "Наша Мисија",
-      "description": "Да обезбедуваме исклучителни решенија за мебел и душеци кои ги трансформираат животните простори во рајови на удобност, стил и функционалност. Посветени сме на испорака на производи кои ги надминуваат очекувањата додека ги одржуваме највисоките стандарди на квалитет и занаетчиство."
+      "description": "Нашата мисија е да ја развиваме компанијата со квалитетни производи и услуги за мебел. Нудиме широк спектар на суровини за кујни, спални соби, софи, врати, канцелариски мебел, хотели и компании. Преку партнерство со светски брендови од Германија, Турција, Италија, Шпанија и Грција, обезбедуваме сеопфатни решенија. Посветеноста кон нашата мисија не е само израз на посветеност кон нашата компанија, туку и посветеност кон инвестирање во нашите луѓе, соработка и транспарентност."
     },
     "vision": {
       "title": "Наша Визија",
-      "description": "Да бидеме водечки производител на мебел и душеци во регионот, препознаени по иновација, квалитет и задоволство на клиентите. Замислуваме иднина во која секој дом е збогатен со нашите внимателно дизајнирани и експертно изработени производи."
+      "description": "Нашата визија е DOQI да биде референтна точка на Европа во областа на суровини за мебел и производство на душеци преку нашиот бренд StarFlex. Стремиме кон одржлив синџир на вредност кој комбинира квалитет, иновација и почит кон животната средина. Веруваме дека можеме да станеме лидери на европските пазари, останувајќи доследни на нашата одговорност, посветеност и страст."
     },
     "story": {
       "title": "Наша Приказна",
-      "description": "DoqiSHPK започна со едноставна визија: да создава мебел и душеци кои комбинираат удобност, издржливост и естетска привлечност. Преку години на посветеност и континуирана иновација, се воспоставивме како доверливо име во индустријата. Нашето партнерство со StarFlex ни овозможи да ја искористиме најнапредната технологија и да ја прошируваме нашата понуда на производи за да ги задоволиме различните потреби на клиентите."
+      "description": "DOQI е основан во 1992 година на Косово, кога територијата беше под режимот на Југославија. Компанијата работеше во исклучително тешки услови, економски и политички. Војната што траеше од 1998 до 1999 година нанесе огромна штета на сите претпријатија на Косово, па така и нашата компанија беше значително оштетена. Сепак, благодарение на посветеноста, компанијата беше повторно изградена и продолжи да обезбедува услуги нудејќи суровини за мебел и стана доверлив партнер. Во 2011 година започнавме производство на душеци под брендот StarFlex. Во 2013 година започнавме да обезбедуваме услуги за сечење, нанесување раб и CNC услуги. Со над 30 години искуство, DOQI стана лидер на пазарот, познат по својата издржливост и посветеност кон обезбедување квалитетни производи."
     },
     "values": {
       "title": "Наши Вредности",
