--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -79,15 +79,15 @@
     },
     "mission": {
       "title": "Наша Мисија",
-      "description": "Пружити изузетна решења намештаја и душека која трансформишу животне просторе у уточишта удобности, стила и функционалности. Посвећени смо испоруци производа који премашују очекивања уз одржавање највиших стандарда квалитета и заната."
+      "description": "Наша мисија је да развијамо компанију са квалитетним производима и услугама намештаја. Нудимо широк спектар сировина за кухиње, спаваће собе, софе, врата, канцеларијски намештај, хотеле и компаније. Партнерством са светским брендовима из Немачке, Турске, Италије, Шпаније и Грчке, пружамо свеобухватна решења. Преданост нашој мисији није само израз посвећености према нашој компанији, већ и посвећеност улагању у наше људе, сарадњу и транспарентност."
     },
     "vision": {
       "title": "Наша Визија",
-      "description": "Бити водећи произвођач намештаја и душека у региону, препознат по иновацији, квалитету и задовољству купаца. Замишљамо будућност у којој је сваки дом обогаћен нашим пажљиво дизајнираним и стручно израђеним производима."
+      "description": "Наша визија је да DOQI буде референтна тачка Европе у области сировина за намештај и производње душека преко нашег бренда StarFlex. Стремимо ка одрживом ланцу вредности који комбинује квалитет, иновације и поштовање животне средине. Верујемо да можемо постати лидери на европским тржиштима, остајући доследни нашој одговорности, посвећености и страсти."
     },
     "story": {
       "title": "Наша Прича",
-      "description": "DoqiSHPK је започео са једноставном визијом: креирати намештај и душеке који комбинују удобност, трајност и естетску привлачност. Кроз године посвећености и континуиране иновације, etablирали смо се као поуздано име у индустрији. Наше партнерство са StarFlex омогућило нам је коришћење најновије технологије и проширење наше понуде производа како бисмо задовољили различите потребе купаца."
+      "description": "DOQI је основан 1992. године на Косову, када је територија била под режимом Југославије. Компанија је оперисала у изузетно тешким условима, како економским тако и политичким. Рат који је трајао од 1998. до 1999. године нанео је огромну штету свим предузећима на Косову, па је тако и наша компанија значајно оштећена. Међутим, захваљујући посвећености, компанија је поново изграђена и наставила да пружа услуге нудећи сировине за намештај и постала поуздан партнер. Године 2011. започели смо производњу душека под брендом StarFlex. Године 2013. започели смо пружање услуга сечења, наношења ивица и CNC услуга. Са преко 30 година искуства, DOQI је постао лидер на тржишту, познат по својој издржљивости и посвећености пружању квалитетних производа."
     },
     "values": {
       "title": "Наше Вредности",
