--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -223,5 +223,24 @@
     "pageNotFoundMessage": "Страницата што ја барате не е пронајдена :(",
     "suggestHome": "Ви предлагаме да се вратите дома",
     "backToHome": "Назад кон Дома"
+  },
+  "reviews": {
+    "title": "Доверба од Илјадници Задоволни Клиенти",
+    "subtitle": "Задоволство на Клиентите",
+    "review1": {
+      "name": "Елира М.",
+      "role": "Сопственичка на Ресторан",
+      "comment": "Како сопственичка на ресторан, издржливоста и дизајнот се еднакво важни. HPL Компактните панели што ги купивме од Doqi Shpk му дадоа на нашиот простор модерен изглед и лесно можат да се справат со секојдневното трошење. Клиентите често го пофалуваат дизајнот — тоа беше вистинската инвестиција за нашиот бизнис."
+    },
+    "review2": {
+      "name": "Петрит Г.",
+      "role": "Дизајнер на Ентериер",
+      "comment": "Работата со Doqi го трансформираше мојот пристап кон комерцијалните проекти. Нивниот широк асортиман на материјали и професионална консултација ми помогнаа да постигнам исклучителни резултати за моите клиенти. Квалитетот зборува сам за себе."
+    },
+    "review3": {
+      "name": "Ана К.",
+      "role": "Менаџерка на Хотел",
+      "comment": "Го намештивме целиот наш хотел со материјали од Doqi. Комбинацијата на издржливост, стил и конкурентни цени ги направи тие наш преферiran партнер. Нашите гости постојано ја фалат модерната естетика."
+    }
   }
 }
