--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -223,5 +223,24 @@
     "pageNotFoundMessage": "Страница коју тражите није пронађена :(",
     "suggestHome": "Предлажемо да се вратите на почетну",
     "backToHome": "Назад на Почетну"
+  },
+  "reviews": {
+    "title": "Поверење Хиљада Задовољних Купаца",
+    "subtitle": "Задовољство Купаца",
+    "review1": {
+      "name": "Елира М.",
+      "role": "Власница Ресторана",
+      "comment": "Као власница ресторана, издржљивост и дизајн су подједнако важни. HPL Компактни панели које смо купили од Doqi Shpk дали су нашем простору модеран изглед и лако подносе свакодневно трошење. Купци често комплиментирају дизајн — била је то права инвестиција за наш посао."
+    },
+    "review2": {
+      "name": "Петрит Г.",
+      "role": "Дизајнер Ентеријера",
+      "comment": "Рад са Doqi је трансформисао начин на који приступам комерцијалним пројектима. Њихов широк асортиман материјала и професионално саветовање помогли су ми да постигнем изузетне резултате за моје клијенте. Квалитет говори сам за себе."
+    },
+    "review3": {
+      "name": "Ана К.",
+      "role": "Менаџерка Хотела",
+      "comment": "Наместили смо цео наш хотел материјалима од Doqi. Комбинација издржљивости, стила и конкурентних цена учинила их је нашим преферираним партнером. Наши гости стално хвале модерну естетику."
+    }
   }
 }
