--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -220,5 +220,24 @@
     "funFact": "DoqiSHPK specijaliziran je za visokokvalitetne Compact HPL proizvode i dušeke. Istražite našu kolekciju kako biste pronašli savršen komad za vaš prostor!",
     "keyboardHint": "Pritisnite",
     "keyboardHintAction": "za povratak na početnu"
+  },
+  "reviews": {
+    "title": "Povjerenje Hiljada Zadovoljnih Kupaca",
+    "subtitle": "Zadovoljstvo Kupaca",
+    "review1": {
+      "name": "Elira M.",
+      "role": "Vlasnica Restorana",
+      "comment": "Kao vlasnica restorana, izdržljivost i dizajn su podjednako važni. HPL Compact paneli koje smo kupili od Doqi Shpk dali su našem prostoru moderan izgled i lako podnose svakodnevno trošenje. Kupci često komplimentiraju dizajn — bila je to prava investicija za naš posao."
+    },
+    "review2": {
+      "name": "Petrit G.",
+      "role": "Dizajner Enterijera",
+      "comment": "Rad sa Doqi je transformisao način na koji pristupam komercijalnim projektima. Njihov širok asortiman materijala i profesionalno savjetovanje pomogli su mi da postignem izuzetne rezultate za moje klijente. Kvalitet govori sam za sebe."
+    },
+    "review3": {
+      "name": "Ana K.",
+      "role": "Menadžerica Hotela",
+      "comment": "Namjestili smo cijeli naš hotel materijalima od Doqi. Kombinacija izdržljivosti, stila i konkurentnih cijena učinila ih je našim preferiranim partnerom. Naši gosti stalno hvale modernu estetiku."
+    }
   }
 }
