--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -220,5 +220,24 @@
     "funFact": "DoqiSHPK specializes in high-quality Compact HPL products and mattresses. Explore our collection to find the perfect piece for your space!",
     "keyboardHint": "Press",
     "keyboardHintAction": "to go home"
+  },
+  "reviews": {
+    "title": "Trusted by Thousands of Happy Customers",
+    "subtitle": "Customer Satisfaction",
+    "review1": {
+      "name": "Elira M.",
+      "role": "Restaurant Owner",
+      "comment": "As a restaurant owner, durability and design are equally important. The HPL Compact panels we purchased from Doqi Shpk gave our space a modern look and can easily handle daily wear and tear. Customers often compliment the design — it was the right investment for our business."
+    },
+    "review2": {
+      "name": "Petrit G.",
+      "role": "Interior Designer",
+      "comment": "Working with Doqi has transformed how I approach commercial projects. Their extensive range of materials and professional consultation helped me deliver exceptional results to my clients. The quality speaks for itself."
+    },
+    "review3": {
+      "name": "Ana K.",
+      "role": "Hotel Manager",
+      "comment": "We furnished our entire hotel with materials from Doqi. The combination of durability, style, and competitive pricing made them our preferred partner. Our guests consistently praise the modern aesthetic."
+    }
   }
 }
